Save local cache

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -91,6 +91,13 @@ jobs:
         run: |
           ./project/scripts/sbt ";compile ;test"
           ./project/scripts/cmdTests
+      - name: Cache Develocity local cache
+        uses: actions/cache@v4
+        with:
+          path: /root/.sbt/1.0/.develocity
+          key: test_non_bootstrapped-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
+          restore-keys: |
+            test_non_bootstrapped-${{ github.event.pull_request.number }}-
 
   test:
     runs-on: ubuntu-latest
@@ -139,6 +146,14 @@ jobs:
       - name: Test with Scala 2 library with CC TASTy (fast)
         run: ./project/scripts/sbt ";set ThisBuild/Build.scala2Library := Build.Scala2LibraryCCTasty; scala2-library-cc/compile; scala2-library-cc-tasty/compile; scala3-bootstrapped/testCompilation i3"
 
+      - name: Cache Develocity local cache
+        uses: actions/cache@v4
+        with:
+          path: /root/.sbt/1.0/.develocity
+          key: test-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
+          restore-keys: |
+            test-${{ github.event.pull_request.number }}-
+
   test_scala2_library_tasty:
     runs-on: ubuntu-latest
     container:
@@ -174,6 +189,14 @@ jobs:
 
       - name: Test with Scala 2 library with CC TASTy
         run: ./project/scripts/sbt ";set ThisBuild/Build.scala2Library := Build.Scala2LibraryCCTasty ;scala3-bootstrapped/test"
+
+      - name: Cache Develocity local cache
+        uses: actions/cache@v4
+        with:
+          path: /root/.sbt/1.0/.develocity
+          key: test_scala2_library_tasty-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
+          restore-keys: |
+            test_scala2_library_tasty-${{ github.event.pull_request.number }}-
 
   mima:
     name: MiMa
@@ -214,6 +237,14 @@ jobs:
         run: |
           # This script cleans the compiler and recompiles it from scratch (keep as last run)
           ./project/scripts/scala2-library-tasty-mima.sh
+
+      - name: Cache Develocity local cache
+        uses: actions/cache@v4
+        with:
+          path: /root/.sbt/1.0/.develocity
+          key: mima-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
+          restore-keys: |
+            mima-${{ github.event.pull_request.number }}-
 
   community_build_a:
     runs-on: ubuntu-latest
@@ -258,6 +289,14 @@ jobs:
         if: ${{ always() }}
         run: cat community-build/dotty-community-build-deps || true
 
+      - name: Cache Develocity local cache
+        uses: actions/cache@v4
+        with:
+          path: /root/.sbt/1.0/.develocity
+          key: community_build_a-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
+          restore-keys: |
+            community_build_a-${{ github.event.pull_request.number }}-
+
   community_build_b:
     runs-on: ubuntu-latest
     container:
@@ -300,6 +339,14 @@ jobs:
       - name: Show dependency tracking file
         if: ${{ always() }}
         run: cat community-build/dotty-community-build-deps || true
+
+      - name: Cache Develocity local cache
+        uses: actions/cache@v4
+        with:
+          path: /root/.sbt/1.0/.develocity
+          key: community_build_b-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
+          restore-keys: |
+            community_build_b-${{ github.event.pull_request.number }}-
 
   community_build_c:
     runs-on: ubuntu-latest
@@ -344,6 +391,14 @@ jobs:
         if: ${{ always() }}
         run: cat community-build/dotty-community-build-deps || true
 
+      - name: Cache Develocity local cache
+        uses: actions/cache@v4
+        with:
+          path: /root/.sbt/1.0/.develocity
+          key: community_build_c-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
+          restore-keys: |
+            community_build_c-${{ github.event.pull_request.number }}-
+
   test_sbt:
     runs-on: ubuntu-latest
     container:
@@ -376,6 +431,14 @@ jobs:
 
       - name: Test sbt
         run: ./project/scripts/sbt "sbt-test/scripted; sbt-community-build/scripted"
+
+      - name: Cache Develocity local cache
+        uses: actions/cache@v4
+        with:
+          path: /root/.sbt/1.0/.develocity
+          key: test_sbt-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
+          restore-keys: |
+            test_sbt-${{ github.event.pull_request.number }}-
 
   test_java8:
     runs-on: ubuntu-latest
@@ -421,4 +484,12 @@ jobs:
       - name: Scala.js Test
         run: |
           ./project/scripts/sbt ";sjsSandbox/run ;sjsSandbox/test ;sjsJUnitTests/test ;set sjsJUnitTests/scalaJSLinkerConfig ~= switchToESModules ;sjsJUnitTests/test ;sjsCompilerTests/test"
+
+      - name: Cache Develocity local cache
+        uses: actions/cache@v4
+        with:
+          path: /root/.sbt/1.0/.develocity
+          key: test_java8-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
+          restore-keys: |
+            test_java8-${{ github.event.pull_request.number }}-
 
