--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -257,7 +257,17 @@ jobs:
 
       - name: MiMa
         run: |
-          ./project/scripts/sbt ";scala3-interfaces/mimaReportBinaryIssues ;scala3-library-bootstrapped/mimaReportBinaryIssues ;scala3-library-bootstrappedJS/mimaReportBinaryIssues; tasty-core-bootstrapped/mimaReportBinaryIssues; scala2-library-bootstrapped/mimaReportBinaryIssues"
+          ./project/scripts/sbt "clean ;scala3-interfaces/mimaReportBinaryIssues ;scala3-library-bootstrapped/mimaReportBinaryIssues ;scala3-library-bootstrappedJS/mimaReportBinaryIssues; tasty-core-bootstrapped/mimaReportBinaryIssues; scala2-library-bootstrapped/mimaReportBinaryIssues"
+      - name: Ls
+        run: ls -ltR -C /root/.sbt
+      - name: Tar local cache
+        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
+      - name: Upload local cache
+        uses: actions/upload-artifact@v4
+        with:
+          name: local-cache-mima
+          path: local-cache.tgz
+          retention-days: 7
 
       - name: TASTy MiMa
         run: |
@@ -271,14 +281,6 @@ jobs:
 #          key: mima-${{ github.event.pull_request.number }}-${{ github.event.pull_request.head.sha }}
 #          restore-keys: |
 #            mima-${{ github.event.pull_request.number }}-
-      - name: Tar local cache
-        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
-      - name: Upload local cache
-        uses: actions/upload-artifact@v4
-        with:
-          name: local-cache-mima
-          path: local-cache.tgz
-          retention-days: 7
 
   community_build_a:
     runs-on: ubuntu-latest
