--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -258,8 +258,9 @@ jobs:
       - name: MiMa
         run: |
           ./project/scripts/sbt "clean ;scala3-interfaces/mimaReportBinaryIssues ;scala3-library-bootstrapped/mimaReportBinaryIssues ;scala3-library-bootstrappedJS/mimaReportBinaryIssues; tasty-core-bootstrapped/mimaReportBinaryIssues; scala2-library-bootstrapped/mimaReportBinaryIssues"
-      - name: Ls
-        run: ls -ltR /
+          ls -ltR /
+#      - name: Ls
+#        run: ls -ltR /
       - name: Ls
         run: ls -ltR /root/.sbt
       - name: Tar local cache
