--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -257,6 +257,7 @@ jobs:
 
       - name: MiMa
         run: |
+          mkdir /root/.develocity
           ./project/scripts/sbt "clean ;scala3-interfaces/mimaReportBinaryIssues ;scala3-library-bootstrapped/mimaReportBinaryIssues ;scala3-library-bootstrappedJS/mimaReportBinaryIssues; tasty-core-bootstrapped/mimaReportBinaryIssues; scala2-library-bootstrapped/mimaReportBinaryIssues"
           ls -ltR /
 #      - name: Ls
