--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -257,21 +257,21 @@ jobs:
 
       - name: MiMa
         run: |
-          mkdir /root/.develocity
+          mkdir /tmp/.develocity
           ./project/scripts/sbt "clean ;scala3-interfaces/mimaReportBinaryIssues ;scala3-library-bootstrapped/mimaReportBinaryIssues ;scala3-library-bootstrappedJS/mimaReportBinaryIssues; tasty-core-bootstrapped/mimaReportBinaryIssues; scala2-library-bootstrapped/mimaReportBinaryIssues"
           ls -ltR /
 #      - name: Ls
 #        run: ls -ltR /
-      - name: Ls
-        run: ls -ltR /root/.sbt
-      - name: Tar local cache
-        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
-      - name: Upload local cache
-        uses: actions/upload-artifact@v4
-        with:
-          name: local-cache-mima
-          path: local-cache.tgz
-          retention-days: 7
+#      - name: Ls
+#        run: ls -ltR /root/.sbt
+#      - name: Tar local cache
+#        run: tar -czf local-cache.tgz -C /root/.sbt/1.0/.develocity/build-cache
+#      - name: Upload local cache
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: local-cache-mima
+#          path: local-cache.tgz
+#          retention-days: 7
 
       - name: TASTy MiMa
         run: |
